--- a/src/04-Normalitat.Rmd
+++ b/src/04-Normalitat.Rmd
@@ -4,12 +4,6 @@ El cos de descomposició d'un polinomi juga un paper destacat al llarg del curs.
 Aquí el definirem, i en demostrarem l'existència i unicitat (llevat d'isomorfisme).
 Aprofitarem per definir extensions normals (aquelles que són cos de descomposició d'un conjunt de polinomis).
 
-Com a aplicació, s'introduiran els polinomis i cossos ciclotòmics, i ho lligarem amb la
-demostració de l'existència i unicitat de cossos finits de cardinal potència d'un primer.
-
-També veurem les clausures algebraiques, i una construcció (seguint @artinalgebra i @zbigniew). Això ens permetrà (assumint el teorema fonamental
-de l'àlgebra, que demostrarem més endavant) pensar els elements algebraics sobre $\QQ$ dins dels complexos.
-
 ## Cossos de descomposició
 
 Diem que un polinomi $f(x)\in F[x]$ *descomposa completament* en una extensió $K/F$ si es pot escriure com a producte
@@ -53,12 +47,18 @@ En tot cas, si $\tilde\sigma$ és un d'aquests morfismes, com que $[K \colon F(\
 d'inducció i $\tilde\sigma$ es pot aixecar a com a molt $[K\colon F(\alpha)]$ morfismes a $L$.
 :::
 
-Revisant la demostració anterior, obtenim els dos següent corol·laris.
+Revisant la demostració anterior, obtenim els següents corol·laris.
 
 ::: {.corollary #variacio-aixecament-1}
 Siguin $K/F$ i $L/F$ extensions d'un cos $F$. Si existeix $\alpha\in K$ tal que $\Irr_{\alpha,F}(x)$
 no té cap arrel a $L$, aleshores no existeix cap $F$-morfisme $K\to L$.
 :::
+
+::: {.corollary #variacio-aixecament-3}
+Sigui $\sigma\colon F\to L$ un morfisme donat, suposem que $K=F(\gamma_1,\ldots,\gamma_n)$ amb polinomis mínims $g_i(x)$. Suposem que $\sigma(g_i)(x)$ té una arrel a $L$ per a tot $i$. Aleshores existeix $\psi\colon K\to L$ tal que $\psi|_{F} = \sigma$.
+:::
+
+
 
 ::: {.corollary #variacio-aixecament-2}
 Suposem que tot polinomi irreductible a $F$ amb una arrel a $K$ descomposa completament a $L$. Aleshores
@@ -66,6 +66,7 @@ $$
 |\Hom_{F} (K, L)| = [K\colon F].
 $$
 :::
+
 
 
 ::: {.proposition #unicititat-splittingfield name="unicitat del cos de descomposició"}
@@ -106,7 +107,7 @@ formen un grup amb la multiplicació que, de fet, és cíclic. Diem que una arre
 $\zeta_n$ és *primitiva* si és un generador d'aquest grup. Si en fixem una, les altres primitives
 són de la forma $\zeta_n^a$, amb $a$ coprimer amb $n$. Hi ha, doncs, $\varphi(n)$ arrels primitives.
 
-Anomenem *cos ciclotòmic $n$-èssim$* al cos $\QQ(\zeta_n)$, que és el cos de descomposició de $x^n-1$:
+Anomenem *cos ciclotòmic $n$-èssim* al cos $\QQ(\zeta_n)$, que és el cos de descomposició de $x^n-1$:
 si adjuntem $\zeta_n$, automàticament totes les seves potències pertanyen a aquest cos. A la Secció
 \@ref(ciclotomics) aprendrem com calcular el grau d'aquest cos, però --a tall d'espòiler-- podem
 veure fàcilment que quan $n=p$ és primer, aleshores
@@ -157,6 +158,26 @@ ara que les extensions normals tenen una caracterització més senzilla.
 En particular, el cos de descomposició d'un polinomi
 és sempre una extensió normal.
 
+::: {.lemma }
+Suposem que $K/F$ és el cos de descomposició d'un conjunt finit de polinomis $f(x)\in F[x]$. Aleshores $K/F$ és normal.
+:::
+::: {.proof}
+Sense perdre generalitat podem assumir, prenent el producte de tots els polinomis en el conjunt finit de l'enunciat, que $K/F$ és el cos de descomposició d'un polinomi $g(x)\in F[x]$ amb arrels $\gamma_1,\ldots,\gamma_n$. Sigui ara $\alpha\in K$ una arrel d'un polinomi $f(x)$, que podem suposar irreductible. Volem veure que si $\beta$ és una arrel de $f(x)$, aleshores $\beta\in K$.
+
+Sigui $L$ el cos de descomposició de $f(x)g(x)$, i considerem els subcossos $F(\alpha)$ i $F(\beta)$. Hi ha un isomorfisme $\sigma \in \Hom_F(F(\alpha), F(\beta))$ i podem composar-lo amb la inclusió $F(\beta) \subset K(\beta)$. Considerem aleshores el diagrama
+$$
+\xymatrix{
+K\ar@{-->}^{\psi}[r]\ar@{-}[d] & K(\beta)\\
+F(\alpha)\ar[ur]^{\sigma}.
+}
+$$
+Pel Corol·lari \@ref(cor:variacio-aixecament-3), obtenim $\psi\colon K\to K(\beta)$ estenent $\sigma$. Observem que, com que $f(x)\in F[x]$, tenim $\psi(f)=f$. Per tant,
+$$
+0 = \psi(g(\gamma_i)) = g(\psi(\gamma_i)) \implies \psi(\gamma_i)\in K.
+$$
+D'aquí en traiem que $\psi(K)\subseteq K$. En particular, $\beta=\psi(\alpha)\in K$, com volíem demostrar.
+:::
+
 ::: {.proposition }
 Una extensió $K/F$ és normal si i només si $K$ és el cos de descomposició d'un conjunt $S\subset F[x]$ de polinomis de $F$.
 :::
@@ -169,7 +190,7 @@ aleshores sense perdre generalitat podem suposar que $f(x)$ és irreductible. Co
 d'elements de $K$ que són arrels de polinomis a $S$. Podem trobar un subconjunt finit $S_0$ i el seu corresponent
 conjunt d'arrels $\Sigma_0$ tals que $\alpha\in F(\Sigma_0)$. Però aleshores $F(\Sigma_0)$ és un
 cos de descomposició d'un polinomi (el que s'obté multiplicant tots els polinomis de $S_0$ i extraient-ne la part lliure
-de quadrats). Per tant, $f(x)$ descomposa completament a $F(\Sigma_0)$ i per tant també a $K$.
+de quadrats). El lema anterior ens garanteix que $f(x)$ descomposa completament a $F(\Sigma_0)$ i per tant també a $K$.
 :::
 
 ::: {.proposition}
