--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -5,7 +5,7 @@
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
 \usetikzlibrary{positioning}
-\usepackage[catalan]{babel}
+% \usepackage[catalan]{babel}
 \usepackage[left=3.5cm, right=3.5cm, top=3.5cm, bottom=3.5cm]{geometry}
 \usepackage{csquotes}
 \DeclareQuoteStyle{catalan}{``}{''}{``}{''}
