--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -1,5 +1,6 @@
 \usepackage{textcomp}
 \usepackage{booktabs}
+\usepackage{float}
 \usepackage{caption}
 \usepackage{tikz, tikz-cd}
 \usepackage{pgfplots}
